# PRism

./: .env.example  .gitignore  PRISM_AI_ENGINEERING_SPEC.md  PRism_AI_Final_Roadmap.md  _trace.py  pyproject.toml  setup.ps1
ai/: __init__.py  config.py  settings.py  utils.py  utils_core.py
ai/agents/: __init__.py  architecture.py  architecture_agent.py  base.py  code_quality.py  code_quality_agent.py  dependency.py  documentation.py  documentation_agent.py  merge_recommendation_agent.py  performance_agent.py  prompt_manager.py  repo_qa.py  repository_context_agent.py  security.py  security_agent.py  test_coverage.py  testing_agent.py
ai/embeddings/: wrapper.py
ai/graph/: builder.py  nodes.py
ai/llm/: __init__.py  embeddings.py  gemini.py  llm_factory.py  openai.py  wrapper.py
ai/models/: __init__.py  agent.py  agent_result.py  graph_state.py  issues.py  pr_context.py  state.py
ai/orchestrator/: __init__.py  graph.py  router.py  state.py  workflow.py
ai/parsers/: __init__.py  ast.py
ai/prompts/: architecture.md  dependency.md  documentation.md  merge.md  performance.md  quality.md  report.md  security.md  testing.md
ai/rag/: vector_store.py
ai/utils/: __init__.py  exceptions.py  logger.py  metrics.py  retry.py  (+1 more)
backend/: __init__.py  config.py  dependencies.py  main.py  requirements.txt
frontend/: .env.local.example  middleware.ts  next.config.ts  package-lock.json  package.json  tailwind.config.ts  tsconfig.json  tsconfig.tsbuildinfo
rag/: __init__.py  chunker.py  retriever.py  vector_store.py
tests/: test_agents.py  test_graph.py
(+28 files in other folders)
